--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npx vite",
+        "build": " npx vite build"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
