Update folder public and package.json for build process

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "npx vite",
+        "dev": "vite",
         "build": " npx vite build"
     },
     "devDependencies": {
